fix farma delivery