@@ -1,10 +1,13 @@
 package br.com.lett.crawlernode.crawlers.corecontent.brasil;
 
 import br.com.lett.crawlernode.core.fetcher.ProxyCollection;
+import br.com.lett.crawlernode.core.fetcher.methods.ApacheDataFetcher;
+import br.com.lett.crawlernode.core.fetcher.methods.FetcherDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.methods.JsoupDataFetcher;
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.fetcher.models.Response;
 import br.com.lett.crawlernode.core.models.Card;
+import br.com.lett.crawlernode.core.models.Parser;
 import br.com.lett.crawlernode.core.models.Product;
 import br.com.lett.crawlernode.core.models.ProductBuilder;
 import br.com.lett.crawlernode.core.session.Session;
@@ -35,34 +38,23 @@ public class BrasilFarmadeliveryCrawler extends Crawler {
 
    public BrasilFarmadeliveryCrawler(Session session) {
       super(session);
+      super.config.setParser(Parser.HTML);
    }
-
    @Override
-   protected Object fetch() {
-      Request request = Request.RequestBuilder.create().setUrl(session.getOriginalURL()).setProxyservice(
-         Arrays.asList(
+   protected Response fetchResponse() {
+      Request request =Request.RequestBuilder.create()
+         .setProxyservice(Arrays.asList(
+
+            ProxyCollection.BUY,
+            ProxyCollection.NETNUT_RESIDENTIAL_CO_HAPROXY,
             ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY,
-            ProxyCollection.NETNUT_RESIDENTIAL_ES_HAPROXY
-         )
-      ).build();
-
-      Response response = dataFetcher.get(session, request);
-      String content = response.getBody();
-
-      int statusCode = response.getLastStatusCode();
-
-      if ((Integer.toString(statusCode).charAt(0) != '2' &&
-         Integer.toString(statusCode).charAt(0) != '3'
-         && statusCode != 404)) {
-         request.setProxyServices(Arrays.asList(
-            ProxyCollection.BUY_HAPROXY,
-            ProxyCollection.NETNUT_RESIDENTIAL_BR_HAPROXY));
-
-         content = new JsoupDataFetcher().get(session, request).getBody();
-      }
-
-      return Jsoup.parse(content);
+            ProxyCollection.NETNUT_RESIDENTIAL_BR))
+         .setSendUserAgent(false)
+         .setUrl(session.getOriginalURL())
+         .build();
+      return CrawlerUtils.retryRequestWithListDataFetcher(request,List.of(new ApacheDataFetcher(), new JsoupDataFetcher(), new FetcherDataFetcher()),session);
    }
+
 
    @Override
    public boolean shouldVisit() {
